# irf-poc

./: .gitignore  pyproject.toml  requirements.txt
notebooks/: a549.ipynb  github-example.ipynb  strawberry.ipynb
